--- a/tdd_exercise/templates/drill.html
+++ b/tdd_exercise/templates/drill.html
@@ -52,6 +52,9 @@
 <form action="/cheat/{{clue.id}}">
     <button type="submit" onclick="">Cheat</button>
 </form>
+        <form action="/xword-answer/">
+    <button type="submit" onclick="">New Question</button>
+</form>
     </div>
 </div>
 {% endblock %}
