I think I'm returning the correct stats in the answer view, I found the objective a little vague though

--- a/tdd_exercise/templates/answer.html
+++ b/tdd_exercise/templates/answer.html
@@ -35,10 +35,10 @@
         {% for ent in entry_list %}
      <tr>
            <td>
-               {{ forloop.counter }}
+               {{ ent.count }}
             </td>
             <td>
-                {{ent.entry_text}}
+                {{ ent.entry }}
             </td>
         </tr>
         {% endfor %}
